<resources>
    <string name="app_name">QuickPoll</string>
    <string name="scan_upc">Scan barcode</string>
    <string name="manual_upc">Enter upc manually</string>
    <string name="import_barcode">Import photo from library</string>
    <string name="access_history">Search history</string>
    <string name="enter_upc_title">Enter UPC</string>
    <string name="search_input">Search</string>
    <string name="ebay_price">Ebay Price</string>
    <string name="walmart_price">Walmart Price</string>
    <string name="amazon_price">Amazon Price</string>

    <string name="walmart_publisher_id">sq5tq5gekkvc4fd476muh65m</string>
    <string name="title_activity_walmart">walmartActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
