<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/blue">

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="424dp">
        <!--android:background="@color/white"!-->
    </RelativeLayout>

    <Button
        android:id="@+id/scan_barcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/scan_upc"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"
        android:onClick="scan"/>

    <Button
        android:id="@+id/enter_upc_manually"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/manual_upc"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"/>

    <Button
        android:id="@+id/import_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_barcode"
        android:onClick="goToGallery"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"/>

    <Button
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/access_history"
        android:textColor="@color/white"
        android:background="@drawable/button_bg"/>

</LinearLayout>
