<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_search_upc"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.smithjacob.quickpoll.SearchUPCActivity">

    <TextView
        android:id="@+id/productName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_alignParentTop="true" />

    <TextView
        android:id="@+id/productAvgRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Display3"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="51dp" />

    <Button
        android:id="@+id/ebayButton"
        android:text="@string/ebay_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/productAvgRating"
        android:layout_marginStart="190dp"
        android:onClick="ebay" />

    <Button
        android:id="@+id/wmButton"
        android:text="@string/walmart_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ebayButton"
        android:layout_marginStart="190dp"
        android:onClick="walmart" />

    <Button
        android:id="@+id/amzButton"
        android:text="@string/amazon_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/wmButton"
        android:layout_marginStart="190dp"
        android:onClick="amazon" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/ipad"
        android:layout_above="@+id/productDescription"
        android:layout_toStartOf="@+id/productAvgRating"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="100dp"/>

    <TextView
        android:id="@+id/productDescription"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Description"
        android:layout_below="@id/amzButton"/>

    <TextView
        android:id="@+id/productDescription2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxLines="2"
        android:text="Description 2"
        android:layout_below="@id/productDescription" />

</RelativeLayout>
